Redesigned removed - and border color

--- a/continents/africa/south-african-post-office.html
+++ b/continents/africa/south-african-post-office.html
@@ -318,20 +318,19 @@
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
                 <h1 class="text=xl font-medium">Postbank's Master Key</h1>
-                <p class="pl-4">- Employees with access to Postbank's master key, an essential component of the bank's security system, were responsible for the breach. These insiders carried out illegal transactions by abusing their positions. They were able to function without being discovered right away since there were lax access controls. This suggests that the bank's internal security procedures have serious flaws.
-                </p>
+                <p class="">Employees with access to Postbank's master key, an essential component of the bank's security system, were responsible for the breach. These insiders carried out illegal transactions by abusing their positions. They were able to function without being discovered right away since there were lax access controls. This suggests that the bank's internal security procedures have serious flaws.</p>
                 <h1 class="text=xl font-medium">Postbank's Monitoring Systems</h1>
-                <p class="pl-4">- The fraudulent operations were not immediately detected by Postbank's monitoring systems. The delay in discovering the breach was caused in part by the lack of capabilities for anomaly detection and real-time monitoring. Furthermore, such internal dangers could not be adequately addressed by the bank's incident response procedures. This emphasizes the necessity of all-encompassing security plans that incorporate insider threat reduction.</p>
+                <p class="">The fraudulent operations were not immediately detected by Postbank's monitoring systems. The delay in discovering the breach was caused in part by the lack of capabilities for anomaly detection and real-time monitoring. Furthermore, such internal dangers could not be adequately addressed by the bank's incident response procedures. This emphasizes the necessity of all-encompassing security plans that incorporate insider threat reduction.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
                 <h5 class="text-xl font-medium">Personal Information</h5>
-                <p class="pl-4">- About 12 million beneficiaries' names, identification numbers, and contact information were among the private data compromised. Identity theft and other illicit operations can benefit greatly from such data. For those impacted, the disclosure of this information presented serious risks. Concerns over the security of private information in government agencies were also brought up.</p>
+                <p class="">About 12 million beneficiaries' names, identification numbers, and contact information were among the private data compromised. Identity theft and other illicit operations can benefit greatly from such data. For those impacted, the disclosure of this information presented serious risks. Concerns over the security of private information in government agencies were also brought up.</p>
 
                 <h5 class="text-xl font-medium">Financial Information</h5>
-                <p class="pl-4">- Transaction histories and bank account information were also compromised, along with personal data. The bank suffered financial losses as a result of the criminals' ability to carry out illegal operations. Customers' faith in Postbank's ability to protect their funds was further damaged by the disclosure of such financial information. Additionally, it emphasized how susceptible financial organizations could be to internal attacks.</p>
+                <p class="">Transaction histories and bank account information were also compromised, along with personal data. The bank suffered financial losses as a result of the criminals' ability to carry out illegal operations. Customers' faith in Postbank's ability to protect their funds was further damaged by the disclosure of such financial information. Additionally, it emphasized how susceptible financial organizations could be to internal attacks.</p>
 
             </div>
 
@@ -342,7 +341,7 @@
 
 
             <div>
-                <details class="rounded border shadow" open>
+                <details class="rounded border shadow border-indigo-900" open>
                     <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
                     References
                     </summary>
